syntax = "proto3";

package api.user.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service UserAccountAPI {
  rpc UserSignup (UserSignupRequest) returns (UserSignupResponse) {}
  rpc UserResendSignup (UserResendSignupRequest) returns (UserResendSignupResponse) {}
  rpc UserCompleteSignup (UserCompleteSignupRequest) returns (UserCompleteSignupResponse) {}
  rpc UserLogin (UserLoginRequest) returns (UserLoginResponse) {}
  rpc UserRefreshToken (UserRefreshTokenRequest) returns (UserRefreshTokenResponse) {}
  rpc UserLogout (UserLogoutRequest) returns (UserLogoutResponse) {}
  rpc UserUpdateProfile (UserUpdateProfileRequest) returns (UserUpdateProfileResponse) {}
  rpc UserGetSelfProfile (UserGetSelfProfileRequest) returns (UserGetSelfProfileResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc UserChangePassword (UserChangePasswordRequest) returns (UserChangePasswordResponse) {}

  // login-via-google
  rpc UserGoogleAuth (UserGoogleAuthRequest) returns (UserGoogleAuthResponse) {}
  rpc ExchangeGoogleCode (ExchangeGoogleCodeRequest) returns (UserGoogleAuthResponse) {}

  // login-via-metamask
  rpc UserMetaMaskAuth (UserMetaMaskAuthRequest) returns (UserMetaMaskAuthResponse) {}
}

message UserSignupRequest {
  string username = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
  string email = 2 [(buf.validate.field).string = {
    email: true
    min_len: 1
    max_len: 255
  }];
  string password = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
}

message UserSignupResponse {
  string pending_user_name = 1;
  google.protobuf.Timestamp expired_at = 2;
}

message UserResendSignupRequest {
  string email = 3 [(buf.validate.field).string = {
    email: true
    min_len: 1
    max_len: 255
  }];
}

message UserResendSignupResponse {
  string message = 1;
  google.protobuf.Timestamp expired_at = 2;
}

message UserCompleteSignupRequest{
  string email = 1 [(buf.validate.field).string = {
    email: true
    min_len: 1
    max_len: 255
  }];
  string verification_code = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
}

message UserCompleteSignupResponse {
  string message = 1;
}

message UserLoginRequest {
  string email = 1 [(buf.validate.field).string = {
    email: true
    min_len: 1
    max_len: 255
  }];
  string password = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
}

message UserLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message UserRefreshTokenRequest {
  string refresh_token = 1;
}

message UserRefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message UserLogoutRequest {
}

message UserLogoutResponse {
  string message = 1;
}

message UserUpdateProfileRequest {
  string username = 1 [(buf.validate.field).string = {
    min_len: 1;
  }];
  string avatar_url = 2;
}

message UserUpdateProfileResponse {
  string message = 1;
}

message User {
  string user_name = 1;
  string email = 2;
  string avatar_url = 3;
}

message UserGetSelfProfileRequest {}

message UserGetSelfProfileResponse {
  User data = 1;
}

message UserChangePasswordRequest {
  string old_password = 1 [(buf.validate.field).string = {
    min_len : 6
  }];
  string new_password = 2 [(buf.validate.field).string = {
    min_len : 6
  }];
}

message UserChangePasswordResponse {
  string message = 1;
}

message ExchangeGoogleCodeRequest {
  string code = 1 [(buf.validate.field).string = {
    min_len : 1
  }];
}

message UserGoogleAuthRequest {
  string access_token = 1 [(buf.validate.field).string = {
    min_len : 1
  }];
}

message UserGoogleAuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message UserMetaMaskAuthRequest {
  string wallet_address = 1 [(buf.validate.field).string = {
    min_len: 42
    max_len: 42
    pattern: "^0x[0-9a-fA-F]{40}$"
  }];
  string message = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
  string signature = 3 [(buf.validate.field).string = {
    min_len: 132
    max_len: 132
    pattern: "^0x[0-9a-fA-F]{130}$"
  }];
}

message UserMetaMaskAuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}